--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -13,18 +13,18 @@ spec:
       ref: path
       repoURL: https://github.com/chrismlee42/github-actions-runner-config.git
       targetRevision: HEAD
-    - chart: gha-runner-scale-set
-      helm:
-        releaseName: gha-runners-argocd-applications-config
-        valuesObject:
-          controllerServiceAccount:
-            namespace: github-actions-runner-controller
-            name: github-actions-runner-controller-gha-rs-controller
-          githubConfigSecret: github-config
-          githubConfigUrl: https://github.com/chrismlee42/argocd-applications-config
-      ref: helm-argocd-applications-config
-      repoURL: ghcr.io/actions/actions-runner-controller-charts
-      targetRevision: 0.12.1
+    # - chart: gha-runner-scale-set
+    #   helm:
+    #     releaseName: gha-runners-argocd-applications-config
+    #     valuesObject:
+    #       controllerServiceAccount:
+    #         namespace: github-actions-runner-controller
+    #         name: github-actions-runner-controller-gha-rs-controller
+    #       githubConfigSecret: github-config
+    #       githubConfigUrl: https://github.com/chrismlee42/argocd-applications-config
+    #   ref: helm-argocd-applications-config
+    #   repoURL: ghcr.io/actions/actions-runner-controller-charts
+    #   targetRevision: 0.12.1
     - chart: gha-runner-scale-set
       helm:
         releaseName: gha-runners-argocd-config
@@ -73,18 +73,18 @@ spec:
       ref: helm-coredns-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
-    - chart: gha-runner-scale-set
-      helm:
-        releaseName: gha-runners-external-dns-config
-        valuesObject:
-          controllerServiceAccount:
-            namespace: github-actions-runner-controller
-            name: github-actions-runner-controller-gha-rs-controller
-          githubConfigSecret: github-config
-          githubConfigUrl: https://github.com/chrismlee42/external-dns-config
-      ref: helm-external-dns-config
-      repoURL: ghcr.io/actions/actions-runner-controller-charts
-      targetRevision: 0.12.1
+    # - chart: gha-runner-scale-set
+    #   helm:
+    #     releaseName: gha-runners-external-dns-config
+    #     valuesObject:
+    #       controllerServiceAccount:
+    #         namespace: github-actions-runner-controller
+    #         name: github-actions-runner-controller-gha-rs-controller
+    #       githubConfigSecret: github-config
+    #       githubConfigUrl: https://github.com/chrismlee42/external-dns-config
+    #   ref: helm-external-dns-config
+    #   repoURL: ghcr.io/actions/actions-runner-controller-charts
+    #   targetRevision: 0.12.1
     - chart: gha-runner-scale-set
       helm:
         releaseName: gha-runners-external-secrets-config
@@ -193,18 +193,18 @@ spec:
       ref: helm-prometheus-operator-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
-    - chart: gha-runner-scale-set
-      helm:
-        releaseName: gha-runners-secrets-store-csi-config
-        valuesObject:
-          controllerServiceAccount:
-            namespace: github-actions-runner-controller
-            name: github-actions-runner-controller-gha-rs-controller
-          githubConfigSecret: github-config
-          githubConfigUrl: https://github.com/chrismlee42/secrets-store-csi-config
-      ref: helm-secrets-store-csi-config
-      repoURL: ghcr.io/actions/actions-runner-controller-charts
-      targetRevision: 0.12.1
+    # - chart: gha-runner-scale-set
+    #   helm:
+    #     releaseName: gha-runners-secrets-store-csi-config
+    #     valuesObject:
+    #       controllerServiceAccount:
+    #         namespace: github-actions-runner-controller
+    #         name: github-actions-runner-controller-gha-rs-controller
+    #       githubConfigSecret: github-config
+    #       githubConfigUrl: https://github.com/chrismlee42/secrets-store-csi-config
+    #   ref: helm-secrets-store-csi-config
+    #   repoURL: ghcr.io/actions/actions-runner-controller-charts
+    #   targetRevision: 0.12.1
     - chart: gha-runner-scale-set
       helm:
         releaseName: gha-runners-valkey-operator-config
