--- a/argocd/external-dns-config-application.yaml
+++ b/argocd/external-dns-config-application.yaml
@@ -10,10 +10,10 @@ spec:
     # server: https://kubernetes.default.svc
   project: default
   sources:
-    # - path: argocd
-    #   ref: path
-    #   repoURL: https://github.com/chrismlee42/external-dns-config.git
-    #   targetRevision: HEAD
+    - path: argocd
+      ref: path
+      repoURL: https://github.com/chrismlee42/external-dns-config.git
+      targetRevision: HEAD
     - chart: external-dns
       helm:
         releaseName: external-dns
