--- a/.github/workflows/sync-argocd-application.yaml
+++ b/.github/workflows/sync-argocd-application.yaml
@@ -10,10 +10,19 @@ jobs:
       - gha-runners-argocd-applications
       - ubuntu-latest
     steps:
+      - name: Install ArgoCD CLI
+        run: |
+          curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+          sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
+          rm argocd-linux-amd64
+
+      - name: Login to ArgoCD
+        env:
+          ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
+          ARGOCD_USERNAME: ${{ secrets.ARGOCD_USERNAME }}
+          ARGOCD_PASSWORD: ${{ secrets.ARGOCD_PASSWORD }}
+        run: |
+          argocd login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USERNAME }} --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
+
       - name: Sync ArgoCD Applications
-        uses: argoproj/argocd-actions@v2
-        with:
-          argocd_server: ${{ secrets.ARGOCD_SERVER }}
-          argocd_username: ${{ secrets.ARGOCD_USERNAME }}
-          argocd_password: ${{ secrets.ARGOCD_PASSWORD }}
-          command: app sync argocd-applications
+        run: app sync argocd-applications
