--- a/.github/workflows/sync-argocd-application.yaml
+++ b/.github/workflows/sync-argocd-application.yaml
@@ -6,9 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   sync:
-    runs-on:
-      - gha-runners-argocd-applications
-      - ubuntu-latest
+    runs-on: [self-hosted, ubuntu-latest]
     steps:
       - name: Install ArgoCD CLI
         run: |
