--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -22,6 +22,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/argocd-applications
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-argocd-applications
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -34,6 +36,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/argocd-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-argocd-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -46,6 +50,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/cert-manager-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-cert-manager-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -58,6 +64,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/cilium-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-cilium-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -70,6 +78,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/coredns-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-coredns-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -82,6 +92,8 @@ spec:
     #         name: github-actions-runner-controller-gha-rs-controller
     #       githubConfigSecret: github-config
     #       githubConfigUrl: https://github.com/chrismlee42/external-dns-config
+    #       minRunners: 1
+    #       namespace: github-actions-runner
     #   ref: helm-external-dns-config
     #   repoURL: ghcr.io/actions/actions-runner-controller-charts
     #   targetRevision: 0.12.1
@@ -94,6 +106,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/external-secrets-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-external-secrets-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -106,6 +120,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/github-actions-runner-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-gha-runner-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -118,6 +134,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/github-actions-runner-controller-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-gha-runner-controller-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -130,6 +148,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/keycloak-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-keycloak-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -142,6 +162,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/local-path-provisioner-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-local-path-provisioner-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -154,6 +176,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/metrics-server-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-metrics-server-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -166,6 +190,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/netbox-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-netbox-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -178,6 +204,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/nvidia-k8s-device-plugin-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-nvidia-k8s-device-plugin-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -190,6 +218,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/prometheus-operator-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-prometheus-operator-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -202,6 +232,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/secrets-store-csi-driver-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-secrets-store-csi-driver-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -214,6 +246,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/valkey-operator-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-valkey-operator-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
@@ -226,6 +260,8 @@ spec:
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/vault-config
+          minRunners: 1
+          namespace: github-actions-runner
       ref: helm-vault-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
