--- a/.github/workflows/sync-argocd-application.yaml
+++ b/.github/workflows/sync-argocd-application.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   sync:
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: gha-runners-argocd-applications
     steps:
       - name: Install ArgoCD CLI
         run: |
