--- a/argocd/valkey-operator-config-application.yaml
+++ b/argocd/valkey-operator-config-application.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: valkey-operator
+  namespace: argocd
 spec:
   destination:
     name: in-cluster
