Undo the poorly-implemented idea that was trying to clean this up with kustomize

--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -4,13 +4,13 @@ metadata:
   name: argocd-applications
   namespace: argocd
 
-labels:
-  - includeSelectors: true
-    pairs:
-      app: argocd-applications
-      managedBy: argocd
-      managementCodeGroup: chrismlee42
-      managementCodeProject: argocd-applications
+# labels:
+#   - includeSelectors: true
+#     pairs:
+#       app: argocd-applications
+#       managedBy: argocd
+#       managementCodeGroup: chrismlee42
+#       managementCodeProject: argocd-applications
 
 resources:
   - argocd-applications-application.yaml
