--- a/argocd/valkey-operator-config-application.yaml
+++ b/argocd/valkey-operator-config-application.yaml
@@ -1,6 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  labels:
+    app: argocd-applications
+    managedBy: argocd
+    managementCodeGroup: chrismlee42
+    managementCodeProject: argocd-applications
   name: valkey-operator
   namespace: argocd
 spec:
