Add path filter to argocd sync workflow

--- a/.github/workflows/sync-argocd-application.yaml
+++ b/.github/workflows/sync-argocd-application.yaml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '.github/workflows/sync-argocd-application.yaml'
+      - 'argocd/**'
   workflow_dispatch:
 jobs:
   sync:
