Add local-storage Application and gha runner

--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -216,6 +216,20 @@ spec:
       targetRevision: 0.12.1
     - chart: gha-runner-scale-set
       helm:
+        releaseName: chris-pc-local-storage
+        valuesObject:
+          controllerServiceAccount:
+            namespace: github-actions-runner-controller
+            name: github-actions-runner-controller-gha-rs-controller
+          githubConfigSecret: github-config
+          githubConfigUrl: https://github.com/chrismlee42/local-storage-config
+          minRunners: 1
+          namespace: github-actions-runner
+      ref: helm-local-storage-config
+      repoURL: ghcr.io/actions/actions-runner-controller-charts
+      targetRevision: 0.12.1
+    - chart: gha-runner-scale-set
+      helm:
         releaseName: chris-pc-metrics-server
         valuesObject:
           controllerServiceAccount:
