--- a/argocd/rook-config-application.yaml
+++ b/argocd/rook-config-application.yaml
@@ -18,7 +18,7 @@ spec:
       ref: path
       repoURL: https://github.com/chrismlee42/rook-config.git
       targetRevision: HEAD
-    - chart: rook
+    - chart: rook-ceph
       helm:
         releaseName: rook
         valuesObject: {}
