--- a/argocd/rook-config-application.yaml
+++ b/argocd/rook-config-application.yaml
@@ -31,6 +31,7 @@ spec:
       selfHeal: true
     syncOptions:
       - RespectIgnoreDifferences=true
+      - ServerSideApply=true
   # ignoreDifferences:
   #   - group: '*'
   #     kind: '*'
