Rename mgr ceph blockpool

--- a/argocd/ceph-config-application.yaml
+++ b/argocd/ceph-config-application.yaml
@@ -25,7 +25,7 @@ spec:
           cephBlockPools:
             - name: mgr
               spec:
-                name: .mgr
+                name: mgr
                 failureDomain: host
                 replicated:
                   requireSafeReplicaSize: false
