--- a/argocd/rook-config-application.yaml
+++ b/argocd/rook-config-application.yaml
@@ -18,13 +18,13 @@ spec:
       ref: path
       repoURL: https://github.com/chrismlee42/rook-config.git
       targetRevision: HEAD
-    - chart: rook-ceph
-      helm:
-        releaseName: rook
-        valuesObject: {}
-      ref: helm
-      repoURL: https://charts.rook.io/release
-      targetRevision: v1.18.1
+    # - chart: rook-ceph
+    #   helm:
+    #     releaseName: rook
+    #     valuesObject: {}
+    #   ref: helm
+    #   repoURL: https://charts.rook.io/release
+    #   targetRevision: v1.18.1
   syncPolicy:
     automated:
       prune: true
