Specify single replica

--- a/argocd/openebs-config-application.yaml
+++ b/argocd/openebs-config-application.yaml
@@ -40,6 +40,12 @@ spec:
               node:
                 initContainers:
                   enabled: false
+          minio:
+            replicas: 1
+          singleBinary:
+            replicas: 1
+            persistence:
+              enabled: true
           zfs-localpv:
             crds:
               zfsLocalPv:
