Set openebs loki replication factor to 1

--- a/argocd/openebs-config-application.yaml
+++ b/argocd/openebs-config-application.yaml
@@ -31,6 +31,10 @@ spec:
             replicated:
               mayastor:
                 enabled: false
+          loki:
+            loki:
+              commonConfig:
+                replication_factor: 1
           lvm-localpv:
             crds:
               lvm-localpv:
